--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>cn.xbatis</groupId>
         <artifactId>xbatis</artifactId>
-        <version>1.9.3-M2</version>
+        <version>1.9.3-M3</version>
     </parent>
 
     <name>xbatis-datasource-routing</name>
@@ -32,6 +32,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
+
+        <xbatis-spring-boot-starter.version>1.9.3-M3-spring-boot4</xbatis-spring-boot-starter.version>
     </properties>
 
     <issueManagement>
@@ -67,7 +69,7 @@
             <dependency>
                 <groupId>cn.xbatis</groupId>
                 <artifactId>xbatis-spring-boot-parent</artifactId>
-                <version>${parent.version}-spring-boot4</version>
+                <version>${xbatis-spring-boot-starter.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
