--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
 
     <properties>
         <xbatis-spring-boot-starter.version>1.9.5</xbatis-spring-boot-starter.version>
+        <!-- 连接池 -->
+        <p6spy.version>3.9.1</p6spy.version>
+        <beecp.verion>5.2.1</beecp.verion>
+        <druid.version>1.2.27</druid.version>
+
+        <seata.version>2.0.0</seata.version>
     </properties>
 
     <issueManagement>
@@ -69,6 +75,24 @@
                 <version>${xbatis-spring-boot-starter.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.chris2018998</groupId>
+                <artifactId>beecp</artifactId>
+                <version>${beecp.verion}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-rm-datasource</artifactId>
+                <version>${seata.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
